After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767496 - flvdemux: won't parse a date string with trailing whitespace
flvdemux: won't parse a date string with trailing whitespace
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.8.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-06-10 12:07 UTC by Nicolas Dufresne (ndufresne)
Modified: 2016-06-10 12:53 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Nicolas Dufresne (ndufresne) 2016-06-10 12:07:39 UTC
Through bug #767424 we found that a valid looking date time won't parse.

   "Thu May 11 15:57:46 2006 "
Comment 1 Tim-Philipp Müller 2016-06-10 12:22:52 UTC
GstDateTime does not parse this kind of string, and the parsing is actually done in flvdemux in parse_flv_demux_parse_date_string(), so moving back there.
Comment 2 Nicolas Dufresne (ndufresne) 2016-06-10 12:28:41 UTC
Oops, good point.
Comment 3 Tim-Philipp Müller 2016-06-10 12:36:31 UTC
I'll have a look.
Comment 4 Tim-Philipp Müller 2016-06-10 12:53:18 UTC
commit c51831a24588f7cbad2c9da6cbf93d81db60485a
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Fri Jun 10 13:42:01 2016 +0100

    flvdemux: fix date parsing when there are trailing spaces
    
    Fixes parsing of "Thu May 11 15:57:46 2006 ".
    
    https://bugzilla.gnome.org/show_bug.cgi?id=767496